# medusa_vehicles

./: .gitmodules  README.md
drivers/drivers_closed/: CMakeLists.txt
drivers/drivers_open/: package.xml
drivers/drivers_open/config/: ardusub_config.yaml  ardusub_pluginlists.yaml
drivers/drivers_open/launch/: ardusub.launch
drivers/drivers_open/scripts/: mavlink_shubham.py
drivers/medusa_ardusub/: CMakeLists.txt  package.xml
drivers/medusa_ardusub/config/: ardusub_pluginlists.yaml  thrusters.yaml
drivers/medusa_ardusub/include/: ThrustToPwm.h
drivers/medusa_ardusub/launch/: ardusub.launch
drivers/medusa_ardusub/scripts/: mavgps.py  mavlink.py
drivers/medusa_ardusub/src/: ThrustToPwm.cpp
drivers/medusa_drivers/: CMakeLists.txt  package.xml
drivers/medusa_drivers/launch/: bluerov2.launch
drivers/tools/: CMakeLists.txt  package.xml
drivers/tools/config/: config.yaml  config_pres.yaml
drivers/tools/doc/: README.md
drivers/tools/include/tools_ros/: ArduSubThrustAllocation.h  FluidPressureToMeas.h  ImuToMeas.h
drivers/tools/launch/: bluerov2.launch  tools.launch
drivers/tools/src/tools_ros/: ArduSubThrustAllocation.cpp  FluidPressureToMeas.cpp  ImuToMeas.cpp
drivers_closed/: package.xml
drivers_open/: CMakeLists.txt
medusa_drivers/: CMakeLists.txt  package.xml
medusa_launch/: CMakeLists.txt  package.xml
medusa_launch/config/dev_configs/: ros.yaml
medusa_launch/config/sim/bluerov2/: nav.yaml  process.yaml  sim.yaml  sim_new.yaml
medusa_launch/config/submeeting/bluerov2/: common.yaml  control.yaml  cooperative.yaml  nav.yaml  process.yaml  sim.yaml  sim2.yaml  sim3.yaml
medusa_launch/launch/: start_vehicle.launch
